# English-Russian-dictionary

./: CMakeLists.txt  Dict.cpp  Dict.h  README.txt  ReadmeRus.txt  main.cpp
